@@ -96,6 +96,7 @@ test {
             '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
             '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
             '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
 
             '-Dio.netty.tryReflectionSetAccessible=true'
     ]
@@ -151,6 +152,7 @@ test {
                 '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
                 '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
                 '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+                '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
 
                 '-Dio.netty.tryReflectionSetAccessible=true'
         ]
@@ -235,6 +237,7 @@ task testOnPackagedReleaseJar(type: Test){
             '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED',
             '--add-opens', 'jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED',
             '--add-opens', 'jdk.jfr/jdk.jfr.internal.management=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
 
             '-Dio.netty.tryReflectionSetAccessible=true'
     ]
